--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "mongoose": "^5.0.0",
+    "node-cron": "^1.2.1",
     "request": "^2.83.0"
   }
 }
